Scrollbar and card css fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 0px;
 }
